*Empty MediaWiki Message*

--- a/Afurk_(tasnudert).mw
+++ b/Afurk_(tasnudert).mw
@@ -1,4 +1,4 @@
-G [[tasensartut (tasnudert)|tasensartut]], '''Afurk''' (s Tlatint «''ramus''», s Teglizt «'''branch'''») d [[Adras amessarti|Adras]] ur igin ara d imsefki deg usismel amnursuy n [[Amuddir|imuddiren]], Yezga-d srid s ddaw n [[adu-tgelda|wadu-tgelda]] yakk d srid sufell n [[azdar-tgelda|wrzdar-tgelda]], yettwasexdem s talɣa timidrust, dɣa adras-a yettwasumer i snat n tsurta ([[Timenzimawen]] yakk d [[tisnimawen]]) deg usismel n [[Thomas Cavalier-Smith]] 
+G [[tasensartut (tasnudert)|tasensartut]], '''Afurk''' (s Tlatint «''ramus''», s Teglizt «''branch''») d [[Adras amessarti|Adras]] ur igin ara d imsefki deg usismel amnursuy n [[Amuddir|imuddiren]], Yezga-d srid s ddaw n [[adu-tgelda|wadu-tgelda]] yakk d srid sufell n [[azdar-tgelda|wrzdar-tgelda]], yettwasexdem s talɣa timidrust, dɣa adras-a yettwasumer i snat n tsurta ([[Timenzimawen]] yakk d [[tisnimawen]]) deg usismel n [[Thomas Cavalier-Smith]]
 
 == Aẓaṛ ==
 
