*Empty MediaWiki Message*

--- a/Tawacult_(tasnudert).mw
+++ b/Tawacult_(tasnudert).mw
@@ -1,6 +1,13 @@
 {{Ẓer taynisemt|Tawacult (taynisemt)}}
 
-Deg [[tasnudert|tesnudert]], '''tawacult''' d [[tasartut]] issegrewen [[talmest|tilmas]] yezdin gar waṭas n [[aɣersiw|iɣersiwen]] [[áreas|irewsen]] (ittemcabin) gar asent. D aswir '''wis semmus''' n [[aseggi amagnu|useggi amagnu]] n tilmas timuddirin (ẓeṛ [[anagrawan]]).
+Deg [[tasnudert|tesnudert]], '''tawacult''' d [[tamsartut]] issegrewen [[tawsit (tudersent)|tiwsitin]] id yekksanayen tireswin (imcabiyen) timeqranin gar-asent. Tawacult tga d [[Adras amessarti|aswir]] wis smus (wis 5) deg [[Asismel n Linné|usismel n Linné]] 
+
+
+== Ifukkuyen ilatinen id yemmalen idrasen ==
+
+
+
+[[Taggayt:idrasen imessartiyen]]
 
 == Tigariwin tilatiniyin i ttaken asertatu ==
 Ayen yerzan [[Asertatu n tamessartut#Tigariwin tilatiniyin i ttaken asertatu|Tigariwin tilatiniyin i ttaken asertatu]], isem n twaculin yettfakka s udfir '''-aceae''' ɣur [[tuga|tugawin]], [[adal|adalen]] d [[agersal|igersalen]] dɣa '''-idae''' ɣur [[aɣersiw|iɣersiwen]].<br />
