*Empty MediaWiki Message*

--- a/Tawacult_(tasnudert).mw
+++ b/Tawacult_(tasnudert).mw
@@ -9,12 +9,7 @@ Deg [[tasnudert|tesnudert]], '''tawacult''' d [[tamsartut]] issegrewen [[tawsit 
 
 [[Taggayt:idrasen imessartiyen]]
 
-== Tigariwin tilatiniyin i ttaken asertatu ==
-Ayen yerzan [[Asertatu n tamessartut#Tigariwin tilatiniyin i ttaken asertatu|Tigariwin tilatiniyin i ttaken asertatu]], isem n twaculin yettfakka s udfir '''-aceae''' ɣur [[tuga|tugawin]], [[adal|adalen]] d [[agersal|igersalen]] dɣa '''-idae''' ɣur [[aɣersiw|iɣersiwen]].<br />
-
-Imedyaten :
-* aɣersiw : ''[[Cervidae]]'' ([[Izerzern]] s teqbaylit), ''[[Hominidae]]''
-* amɣawi : ''[[Liliaceae]]'', ''[[Simaroubaceae]]''
+== Idrasen imessartiyen n iden ==
 
 == Isertuta nniḍen n tamessartut ==
 {{Isertuta deg anagrawan}}
