--- a/Tawacult_(tasnudert).mw
+++ b/Tawacult_(tasnudert).mw
@@ -12,7 +12,43 @@ Deg [[tasnudert|tesnudert]], '''tawacult''' d [[tamsartut]] issegrewen [[tawsit 
 == Idrasen imessartiyen n iden ==
 
 == Isertuta nniḍen n tamessartut ==
-{{Isertuta deg anagrawan}}
+
+* [[Amenkud(tasnudert)|Amenkud]], [[Taɣult (tasnudert)|Afuɣal]], [[Taɣult (tasnudert)|Taɣult]] (''Superregnum, Imperium, Dominium'')
+* '''[[Tagelda]]''' ('''Regnum''') 
+* [[Adu-tgelda]] (''Subregnum'') 
+* [[Afurk (tasnudert)|Afurk]] (''Ramus'', « ''branch'' » s Teglizit)
+* [[Azdar-tgelda]] (''Infraregnum'')
+** [[Afel-adur]], [[Agzam|Afel-agzam]] (''Superphylum, Superdivisio'') 
+** [[Adu-wadur]], [[Adu-gzam]] (''Subphylum, Subdivisio'')
+** [[Azdar-adur]] (''Infraphylum'') 
+*** ''[[Ifelasmil]]'' (''Classis'')
+*** '''[[Asmil (tasnudert)|Asmil]]''' ('''Classis''')
+*** [[Adu-smil]] (''Subclassis'') 
+*** [[Azdar-smil]] (''Infraclassis'') 
+**** [[Afelfesna]] (''Superordo'') 
+**** '''[[Tafesna (tasnudert)|Tafesna]]''' ('''Ordo''') 
+**** [[Adu-tfesna]] (''Subordo'') 
+**** [[Azdar-tfesna]] (''Infraordo'') 
+**** [[Imzik-tfesna]] (''Microordo'')
+***** [[Afeltwacult]] (''Superfamilia'')
+***** '''[[Tawacult (tasnudert)|Tawacult]]''' ('''Familia''')
+***** [[Adu-twacult]] (''Subfamilia'')
+***** [[Taɣreft (Tasartut)|Taɣreft]] (''Tribus'') 
+***** [[Taɣreft (Tasartut)|Adu-teɣreft]] (''Subtribus'')
+****** '''[[Tawsit (tudersent)|Tawsit]]''' ('''Genus''') 
+****** [[Adu-tewsit]] (''Subgenus':) 
+****** [[Tigezmi (tasnudert)|Tigezmi]] (''Sectio'')
+****** [[Adu-tgezmi (tasnudert)|Adu-tgezmi]] (''Subsectio'')
+******* '''[[Talmest]]''' ('''Species''') 
+******* [[Adu-telmest]] (''subspecies'')- [[Adras (tasnudert)|Adras asnudran]] amaddud (unṣib) aneggar 
+******* [[Irzi]], [[Azɣer (tasnudert)|Azɣer]] gan d idrasen isnudranen irmadduden (arunṣib) 
+******* [[Adu-rzi]] (''subvarietas'') - [[Adu-zɣer]] gan d idrasen isnudranen irmadduden
+******* [[Talɣa (asismel)|Talɣa]] (''Forma'')
+******* [[Adu-telɣa]] (''Subforma'')
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt: idrasen imessartiyen]]
 
 == Ẓeṛ daɣen ==
 * [[Aseggi amagnu]]
