*Empty MediaWiki Message*

--- a/Tawacult_(tasnudert).mw
+++ b/Tawacult_(tasnudert).mw
@@ -9,7 +9,7 @@ Deg [[tasnudert|tesnudert]], '''tawacult''' d [[tamsartut]] issegrewen [[tawsit 
 
 [[Taggayt:idrasen imessartiyen]]
 
-== Isertuta nniḍen n tamessartut ==
+== Idrasen imessartiyen n iden ==
 
 * [[Amenkud(tasnudert)|Amenkud]], [[Taɣult (tasnudert)|Afuɣal]], [[Taɣult (tasnudert)|Taɣult]] (''Superregnum, Imperium, Dominium'')
 * '''[[Tagelda]]''' ('''Regnum''') 
