--- a/Tawacult_(tasnudert).mw
+++ b/Tawacult_(tasnudert).mw
@@ -4,7 +4,7 @@ Deg [[tasnudert|tesnudert]], '''tawacult''' d [[tamsartut]] issegrewen [[tawsit 
 
 
 == Ifukkuyen ilatinen id yemmalen idrasen ==
-Ɣef wayen yezzin ɣef ifukkuyen ilatinen id yemmalen idrasen, udmawen n twaculit ttfakkan s udfir -'''aceae'''- (s ''āceae'', i wesget unti set Tlatint -āceus « tirewsi »)
+Ɣef wayen yezzin ɣef ifukkuyen ilatinen id yemmalen idrasen, udmawen n twaculit ttfakkan s udfir -'''aceae'''- (s ''āceae'', i wesget unti set Tlatint -āceus « tirewsi ») ɣer [[imɣi|yimɣan]], [[azal|adalen]] d [[agursal|iberčečča]] yakk d '''idae''' ɣer [[aɣersiw|iɣersiwen]] 
 
 
 [[Taggayt:idrasen imessartiyen]]
