*Empty MediaWiki Message*

--- a/Lburǧ_n_Yimnayen.mw
+++ b/Lburǧ_n_Yimnayen.mw
@@ -1,6 +1,6 @@
 {{Infobox city}}
 
-'''Burj Mnayel''' (s yisem-is n tidet: '''''Lburǧ n Yemnayen''''''''), d taɣiwant n ugezdu n [[Bumerdas]], zedɣen-tt 53.782 n yimezdaɣen.
+'''Imnayen''' d [[taɣiwant]] n ugezdu n [[Bumerdas]], zedɣen-tt 53.782 n yimezdaɣen.
 
 == Tarakalt ==
 
