*Empty MediaWiki Message*

--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -14,7 +14,7 @@
 | related_groups = 
 | image_caption = Tameṭṭut taqbaylit
 }}
-'''Iqbayliyen''' neɣ '''Leqbayel''' d agdud [[amaziɣ]] yettidir deg [[lezzayer]].
+'''Iqbayliyen''' neɣ '''Izdayen''' d [[aɣref] [[imaziɣen|amaziɣ]] yettidir deg [[Tamurt n t|Tmurt n Iqbayliyen]] id yezgan deg Ugafa ASEMRAN n [[lezzayer]].
 
 ==Ansa i d yekka wawal n "''Leqbayel''"== 
 Anamek n wawal-agi yekka-d ahat seg [[taɛrabt|teɛṛabt]] d "(Agdud n) iderman". Rruman ssawalen-asen d ''Quinquegentanei'' "semmus (5) n Iderman" (wid izedɣen neɣ yettidiren ''Mons Ferratus'', "[[Ǧerǧer|Adrar n ğerğer]]"), wissen isem n tura ma yekka-d seg win n zik neɣ uhu. 
