*Empty MediaWiki Message*

--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -8,7 +8,7 @@
 | region2 = {{flagcountry|France}}
 | pop2 = [[Circa|c.]] ~1 imelyan {{smallsup|e}}<ref name="creb" />
 | langs = [[Tutlayt taqbaylit]]<br />Tutlayt wis sin: [[Tafransist]], [[Taɛrabt]]<ref>{{cite book|last1=Frawley|first1=William J.|title=International Encyclopedia of Linguistics: AAVE - Esperanto, Volume 1|date=2003|publisher=Oxford University Press|isbn=978-0195139778|page=221|url=https://www.google.com/books?id=sl_dDVctycgC&pg=PA221|accessdate=21 December 2017}}</ref>
-| rels = Amur ameqqran d [[Islam|inselmen]], lbaqi yeḍfer [[Takatulit]] akked [[Taprutistant]]
+| rels = Amur ameqqran d [[Islam|inselmen]] 85%, akken i tella tdersi yeṭṭafaren [[Tamasiḥit|Tamasiḥit]], [[Tudayt]] yakk d [[ticufert]] 15%
 | native_name = 
 | native_name_lang = 
 | related_groups = 
