*Empty MediaWiki Message*

--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -23,6 +23,8 @@ Ur neksib ara aḥric ameqran n tansa ɣef umezruy n yisem-agi, maca (d acu kan)
 Ass-agi llan kra imusnawen iqbayliyen i d-yuran dakken isem n yeqbayliyen aẓaran (anaṣli) d Igawawen neɣ Izwawen. Af tekti-yagi amusnaw n Tesmislit aqbayli Mass [[Salem Caker]] yuran-d dakken [[Iqbayliyen]] ttun isem-nsen anaṣli "Izwawen" i d-yekkan seg wassag n yiwet n Taddart yettwasnen aṭas deg Tmurt iqbayliyen zîk. S tutlayt Tafransist awal "Zouave" yekka-d seg Azwaw.
 Llan kra imusnawen n umezruy igrigiyen i d-yudren awal-ag Aqbayli neɣ iqbayliyen (leqbayel) s talɣa n Cabales. Acku ur nezmir ara ass-a ad d-nefk ttbut ma yella seg wawal-a i d-yekka neɣ uhu, imi ur nesɛi kra n ttbut .
 
+== Aẓaṛ n wawal ''izdayen'' ==
+
 ==Agdud Aqbayli==
 
 '''Amezruy n wegdud aqbayli''', d amezruy ameqran akk-d yewwin i g issewhamen, ɛeddan luluf n iseggasen, azal 10 000 iseggasen uqbel talalit n [[Ɛisa]] ; d imezdaɣ imezwura n [[Tafriqt n Ugafa|Tefriqt ugafa]] uqbel n tlalit n umezruy atrar, agdud aqbayli d yiwen wegdud gar yegduden iqdimen i yeğğan later deg umezruy n yemdanen.  
