*Empty MediaWiki Message*

--- a/Iqbayliyen.mw
+++ b/Iqbayliyen.mw
@@ -17,9 +17,9 @@
 '''Iqbayliyen''' neɣ '''Izdayen''' d [[aɣref]] [[imaziɣen|amaziɣ]] yettidir deg [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]] id yezgan deg Ugafa ASEMRAN n [[lezzayer]].
 
 ==Ansa i d yekka wawal n "''Leqbayel''"== 
-Anamek n wawal-agi yekka-d ahat seg [[taɛrabt|teɛṛabt]] d "(Agdud n) iderman". Rruman ssawalen-asen d ''Quinquegentanei'' "semmus (5) n Iderman" (wid izedɣen neɣ yettidiren ''Mons Ferratus'', "[[Ǧerǧer|Adrar n ğerğer]]"), wissen isem n tura ma yekka-d seg win n zik neɣ uhu. 
+Aẓaṛ n wawal-a yekka-d seg [[taɛrabt|teɛṛabt]] ''قبائل'' anamek-is s [[Taqbaylit|Teqbaylit]] «tiwsitin». Iṛumanen ssawalen-asen d ''Quinquegentanei'' (semmus (5) n Iderman), (wid izedɣen neɣ yettidiren ''Mons Ferratus'', "[[Ǧerǧer|Adrar n ğerğer]]"), wissen isem n tura ma yekka-d seg win n zik neɣ uhu. 
 
-Ur neksib ara aḥric ameqran n tansa ɣef umezruy n yisem-agi, maca (d acu kan) nezmer a nefk yiwet n turda yesɛan assaɣ s tawtilt n Tamurt n Iqbayliyen deg ukud-nni (tallit-nni) imi medden ddren seddaw n tezmert neɣ iduba (adabu) n tiddukla n iderman.
+S umata ur llin ara aḥric ameqran n tansa ɣef umezruy n yisem-agi, maca (d acu kan) nezmer a nefk yiwet n turda yesɛan assaɣ s tawtilt n Tamurt n Iqbayliyen deg ukud-nni (tallit-nni) imi medden ddren seddaw n tezmert neɣ iduba (adabu) n tiddukla n iderman.
 Ass-agi llan kra imusnawen iqbayliyen i d-yuran dakken isem n yeqbayliyen aẓaran (anaṣli) d Igawawen neɣ Izwawen. Af tekti-yagi amusnaw n Tesmislit aqbayli Mass [[Salem Caker]] yuran-d dakken [[Iqbayliyen]] ttun isem-nsen anaṣli "Izwawen" i d-yekkan seg wassag n yiwet n Taddart yettwasnen aṭas deg Tmurt iqbayliyen zîk. S tutlayt Tafransist awal "Zouave" yekka-d seg Azwaw.
 Llan kra imusnawen n umezruy igrigiyen i d-yudren awal-ag Aqbayli neɣ iqbayliyen (leqbayel) s talɣa n Cabales. Acku ur nezmir ara ass-a ad d-nefk ttbut ma yella seg wawal-a i d-yekka neɣ uhu, imi ur nesɛi kra n ttbut .
 
