*Empty MediaWiki Message*

--- a/Afel-adur.mw
+++ b/Afel-adur.mw
@@ -1,3 +1,13 @@
+Deg [[tinnagrawt]] n umadal n [[tudert]], '''Afel-adur''' iga d [[adras amessarti]] s uswir anemmas, srid sufell n wedras [[Adur (tasnudert)|wadur]] deg [[Asismel n Linné|usismel n Linné]] amensay 
+
+'''Superphylum''' d anamek imerni yettusexdem adɣa deg [[tasenɣersiwt|tsenɣersiwt]]  
+
+== Idrasen imessartiyen n iden ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:idrasen imessartiyen]]
+
 == Assissen ==
 
 
