--- a/Ugur_n_telmest.mw
+++ b/Ugur_n_telmest.mw
@@ -1,4 +1,4 @@
-'''Ugur n telmest''' (S [[Taglizit|Teglizt]]: ''Species concept'') d irem id yesskanayen [[arway]] n [[aseqsi|iseqsiyen]] imrayen (iweɛṛen) yakk yettwaqqnen gugar-asen. Ugur-a yesskanay-d iman-is mi ara ad kkren [[asnudran|isnudranen]] ad snemlen irem n [[talmest|telmest]]. Isenmal n yirem n telmest''' deg waṭas nwakuden d win yettsenniden ɣef tarrayt n [[amyaraw|umyaraw]] n yigmamen 
+'''Ugur n telmest''' (S [[Taglizit|Teglizt]]: ''Species concept'') d irem id yesskanayen [[arway]] n [[aseqsi|iseqsiyen]] imrayen (iweɛṛen) yakk yettwaqqnen gugar-asen. Ugur-a yesskanay-d iman-is mi ara ad kkren [[asnudran|isnudranen]] ad snemlen irem n [[talmest|telmest]]. Isenmal n yirem n telmest deg waṭas nwakuden d win yettsenniden ɣef tarrayt n [[amyaraw|umyaraw]] n yigmamen
 
 == Ẓeṛ daɣen ==
 
