--- a/Adras_amessarti.mw
+++ b/Adras_amessarti.mw
@@ -22,7 +22,7 @@
 |colspan="2" | [[Tagelda (tasnudert)|Tagelda]]
 |-
 ||''phylum''||''divisio''
-||[[Astirf (tasnudert)|Adur]]<sup> (deg [[Tasnaɣersiwt]])</sup>||[[Astirf (tasnudert)|Adur]]<sup> (deg [[Tasnimɣan]])</sup>
+||[[Astirf (tasnudert)|Adur]]<sup> (deg [[Tasnaɣersiwt]])</sup>||[[Astirf (tasnudert)|Agzam]]<sup> (deg [[Tasnimɣan]])</sup>
 |-
 |colspan="2" | ''classis''
 |colspan="2" | [[Asmil (tasnudert)|Asmil]]
