--- a/Talmest.mw
+++ b/Talmest.mw
@@ -8,7 +8,7 @@ Tilmas yeṭṭafaren yiwen n uẓar ttusisemlen-t deg yiwet n [[tawsit (tuderse
 
 == Amezruy n tsartut ==
 
-== [[Ugur n telmas]] ==
+== [[Ugur n telmest]] ==
 
 == Ẓeṛ daɣen ==
 
