*Empty MediaWiki Message*

--- a/Talmest.mw
+++ b/Talmest.mw
@@ -4,6 +4,8 @@ Tilin n tufutin [[Assezgi|timsezgiyin]] timazzagin i kra n twennaṭ yettawi ar 
 
 Tilmas yeṭṭafaren yiwen n uẓar ttusisemlen-t deg yiwet n [[tawsit (tudersent)|tewsit]] anect-a yettili-d s uguni ɣef umcabi gar-asen
 
+Tilin n usenmel amellil i yirem n telmest d wayen yellan s ddaw-as d ayen yellan d imsefki i wefran n telmas d tussna-nsent i wsersi n [[turda|turdiwin]] tisnudranin yakk d wakat n [[tuggtudert]] (biodiversity)
+
 == Asenmel allil n [[asnudran|isnudranen]] ==
 
 == Amezruy n tsartut ==
