--- a/Talmest.mw
+++ b/Talmest.mw
@@ -1,4 +1,4 @@
-'''Talmest''' (s [[talatinit|Tlatint]]: ''species'') deg [[tasnudert|tesnudert]] d yiwet n tigget n [[Tasartut n tesnudert|usismel asnudran]] agejdan, Akken i tga d [[adras amessarti|adras amessarti agejdan]] deg [[Tasensartut|tsensartut]], Talmest tettwassen d akken-it d tagrawt n [[amuddir|imuddiren]] ig zemren ad [[Amercel|mmreclen]] gugar-asen w ad farsen [[tarwa]], Ɣas akken asenmel ayi ur d-ikeffu ara deg waṭas n waddaden maca yella wemray (ṣṣeɛuba) deg usenmel n [[irem]] n telmest, Dɣa anect-a yettwassen s [[ugur n telmest|wugur n talmest]] acku deg waṭas n wakuden ttwasxedmen wawalen n iden am [[tasnasileɣt]] d [[allun anessawsay|ullun anessawsay]] 
+'''Talmest''' (s [[talatinit|Tlatint]]: ''species'') deg [[tasnudert|tesnudert]] d yiwet n tigget n [[Tasartut n tesnudert|usismel asnudran]] agejdan, Akken i tga d [[adras amessarti|adras amessarti agejdan]] deg [[Tasensartut|tsensartut]], Talmest tettwassen d akken-it d tagrawt n [[amuddir|imuddiren]] ig zemren ad [[Amercel|mmreclen]] gugar-asen w ad farsen [[tarwa]], Ɣas akken asenmel ayi ur d-ikeffu ara deg waṭas n waddaden maca yella wemray (ṣṣeɛuba) deg usenmel n [[irem]] n telmest, Dɣa anect-a yettwassen s [[ugur n telmest|wugur n talmest]] acku deg waṭas n wakuden ttwasxedmen wawalen n iden am [[tasnasileɣt]] d [[allun areygaman|ullun areygaman]] 
 
 Tilin n tufutin [[Assezgi|timsezgiyin]] timazzagin i kra n twennaṭ yettawi ar ugzam n telmest ar "temsurta s ddaw n uswir n telmest" am [[adu-telmest]] (neɣ [[Tamsartut|timsurta]] n iden yettusxedmen deg [[tasnimɣan|tesnimɣan]] am [[irzi]] d [[talɣa tusligt]])  
 
