--- a/Amitan.mw
+++ b/Amitan.mw
@@ -1,1 +1,2 @@
+[[File:Methane.Structural_formula.V1.svg|120px|thumb|right|Amitan]]
 '''Amitan''' d [[uddis akruran]] igan d afraran deg [[Hidṛukaṛbun|Tehidṛukaṛbunin]], U Netta d [[agaz]] ilan [[taftart takrurant]]  CH<sub>4</sub>, Mitan azedgan ur ili ara (ur yesɛa ara) [[tikdi]] (rriḥa), Maca mara ad yettusexdem deg uzenzu yettwarway d [[Tifrit (tanga)|tifrit]] ilan tikida
