*Empty MediaWiki Message*

--- a/Takamniwt.mw
+++ b/Takamniwt.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox| caption = Takamniwt/ Tilezda}}
 
-'''Takamniwt''' neɣ '''Tilezda''' (i [[ifes|yefsan]]), ([[isem usnan]]: ''Nigella sativa'') d [[imɣan|imɣi]] yettwasxdmen deg usewwi yettwassen s ''Sinuj''
+'''Takamniwt''' neɣ '''Tilezda''' (i [[ifes|yefsan]]), ([[Assaɣ ussnan]]: '''Nigella sativa''') d [[imɣan|imɣi]] yettwasxdmen deg usewwi yettwassen s ''Sinuj'', talmest-a d tin yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[taseggant yifsan]]
 
 == Ismawen ==
 *Isem-is s latinit: Nigella sativa, Nigella papillosa subsp. atlantica
