*Empty MediaWiki Message*

--- a/Takamniwt.mw
+++ b/Takamniwt.mw
@@ -2,12 +2,10 @@
 
 '''Takamniwt''' neɣ '''Tilezda''' (i [[ifes|yefsan]]), ([[Assaɣ ussnan]]: '''Nigella sativa''') d [[imɣan|imɣi]] yettwasxdmen deg usewwi yettwassen s ''Sinuj'', talmest-a d tin yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[taseggant yifsan]]
 
-== Ismawen ==
-*Isem-is s latinit: Nigella sativa, Nigella papillosa subsp. atlantica
-*Isem-is s tefransist: Nigelle cultivée, ?
-*Ismawen-is nniḍen s teqbaylit: Zrara <ref>'Plantes médicinales de Kabylie' - Mohand Aïd Youssef - Ibis Press -Paris 2006</ref>, Sanuj<ref>'Amawal n Yemɣan - Lexique de plantes ' - Chabane Mohand u Remdane - Mémoire d'études en Agronomie - Université de Tizi ouzou (non daté ~années 80)</ref>
-*Ismawen-is nniḍen s tmaziɣt: 
+== Aglam ==
+Takamniwt d [[imɣi n useggas|imɣi yettidiren yiwen n useggas]]. [[arezza|Arezza-ynes]] d win ibedden ma d [[iferr|iferran-is]] d usdiden (d irqaqen) 
 
+== Takamniwt i wsuji ==
 
 == Isseqdac ==
 
