*Empty MediaWiki Message*

--- a/Amenteẓẓa.mw
+++ b/Amenteẓẓa.mw
@@ -1,5 +1,7 @@
 {{Automatic taxobox}}
-'''Amenteẓẓa''' ([[assaɣ usnan]]: ''Sorex'') d [[tawsit (tudersent)|tawsit]] n [[Timsiffatin|temsuṭaṭ]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] [[imenteẓẓaten]] deg [[tafesna]] n  [[Timenteẓẓatin|tmenteẓẓatin]]
+'''Amenteẓẓa''' ([[assaɣ ussnan]]: '''Sorex''') d [[tawsit (tudersent)|tawsit]] n [[Timsiffatin|temsuṭaṭ]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] [[imenteẓẓaten]] deg [[tafesna (tasnudert)|tfesna]] n  [[Timenteẓẓatin|tmenteẓẓatin]]
+
+Amenteẓẓa d [[aɣersiw]] meẓẓiyen (gar n 4 ar 18 cm) yettemcabi ar [[aɣeṛda|uɣeṛda]], Aṭas n [[talmest|telmas-is]] ttidirent s tuget deg [[Turuft|Uruppa]] d [[Asya]] d [[Tafriqt n Ugafa|Tefriqt Ugafa]]
 
 == Aglam ==
 
