*Empty MediaWiki Message*

--- a/Amenteẓẓa.mw
+++ b/Amenteẓẓa.mw
@@ -7,4 +7,6 @@ Amenteẓẓa d [[aɣersiw]] meẓẓiyen (gar n 4 ar 18 cm) yettemcabi ar [[aɣ
 
 == Učči ==
 
-== Tilmas ==
+== Asismel ==
+
+===Umuɣ n [[adu-tewsit|tdu-wsitin]] d telmas===
