*Empty MediaWiki Message*

--- a/Amenteẓẓa.mw
+++ b/Amenteẓẓa.mw
@@ -10,3 +10,8 @@ Amenteẓẓa d [[aɣersiw]] meẓẓiyen (gar n 4 ar 18 cm) yettemcabi ar [[aɣ
 == Asismel ==
 
 ===Umuɣ n [[adu-tewsit|tdu-wsitin]] d telmas===
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:iɣersiwen]]
+[[Taggayt:tiwsitin n temsuṭaṭ]]
