*Empty MediaWiki Message*

--- a/Amenteẓẓa.mw
+++ b/Amenteẓẓa.mw
@@ -15,3 +15,4 @@ Amenteẓẓa d [[aɣersiw]] meẓẓiyen (gar n 4 ar 18 cm) yettemcabi ar [[aɣ
 
 [[Taggayt:iɣersiwen]]
 [[Taggayt:tiwsitin n temsuṭaṭ]]
+[[Taggayt:Timenteẓẓatin]]
