*Empty MediaWiki Message*

--- a/Timcac_(tawsit).mw
+++ b/Timcac_(tawsit).mw
@@ -21,3 +21,4 @@ Tilmas n tewsit-a ttidiren-t yakk idgan n [[Turuft|Uruppa]] d [[Tafriqt|Tefrikt]
 [[Category:Imcac]]
 [[Category:Timsuṭad]]
 [[Category:Timseksumin]]
+[[Taggayt:Tiwsitin n temsuṭaṭ]]
