*Empty MediaWiki Message*

--- a/Tuggtudert.mw
+++ b/Tuggtudert.mw
@@ -5,6 +5,8 @@ Azal yettwafken i tuggtudert deg wakud ayyi (tura) yusa-d s usrag (s ssebba) n [
 
 == Asenmel ==
 
+Tuggtudert temmal-d tasemrit d umrara deg [[tudert|umadal amiddur]] s talɣiwin-is yakk. Irem-a yettwasenmel s tiseddi deg umagrad wis 2 n [[amsisi ɣef tuggtudert tasnudrant|umsisi ɣef tuggtudert tasnudrant]]
+
 == Amezruy n yirem ==
 
 == Tazrawt n tuggtudert ==
