*Empty MediaWiki Message*

--- a/Tasut_tis_20.mw
+++ b/Tasut_tis_20.mw
@@ -1,4 +1,4 @@
-<center>[[Lqern wis XVII]] | [[Lqern wis XVIII]] | [[Lqern wis XIX]] | '''Lqern wis XX''' | [[Lqern wis XXI]] </center><br />
+<center>[[Lqern wis XVII]] | [[Lqern wis XVIII]] | [[Lqern wis XIX]] | '''Tasut tis 20''' | [[Lqern wis XXI]] </center><br />
 
 <center>
 [[Iseggasen 1900]] | [[Iseggasen 1910]] | [[Iseggasen 1920]] | [[Iseggasen 1930]] | [[Iseggasen 1940]]
@@ -41,6 +41,7 @@
 |}
 </center>
 ----
+
 == Ayen yeḍran ==
 
 == Udmawen imeqqranen ==
