--- a/Tasut_tis_20.mw
+++ b/Tasut_tis_20.mw
@@ -42,6 +42,17 @@
 </center>
 ----
 
+'''Tasut tis 20''' d [[talit]] n [[akud|wakud]] i y-sentayen (i beddun) seg [[ass|wass]] n [[1 yennayer]] [[1901]] tettfakka ass n [[31 dujamber]] [[2000]]. Tasut tis 20 d tallit yeččuren d inelfuyen (ineḍruyen) [[amezruy|imazrayen]] am [[amsenɣi amadalan amenzu|umsenɣi amadalan amezwaru]] d 
+[[amsenɣi amadalan wis sin|wis sin]]. Yakk d tneflit meqqren n illalen n umesni d usiwel. S umata, tasut tis 20 tella d tallit anda teǧǧuǧǧeg teknussna 
+
+== Inelfuyen ==
+* Tanekra n [[amsenɣi Aliban-Aṭelyan|umsenɣi Aliban-Aṭelyan]] aseggas n [[1911]]
+* [[Tamsetna tafṛensist ɣef Umeṛṛuk]] aseggas n [[1912]]
+* Tanekra n [[amsenɣi amadalan amenzu|umsenɣi amadalan amenzu]] deg useggas n [[1914]] ayen i d-yeglan s uɣelluy n [[amenkud awetman|umenkud awetman]] aseggas n [[1923]] 
+* [[Anuɣ n Gallipoli]] gar n [[1915]] d [[1916]] 
+* [[Tagrawla n tuber]] di tmurt n [[Rusya]] aseggas n [[1917]] 
+* Azarug n Afɣanistan [[1919]]
+
 == Ayen yeḍran ==
 
 == Udmawen imeqqranen ==
