*Empty MediaWiki Message*

--- a/Tasut_tis_20.mw
+++ b/Tasut_tis_20.mw
@@ -52,6 +52,18 @@
 * [[Anuɣ n Gallipoli]] gar n [[1915]] d [[1916]] 
 * [[Tagrawla n tuber]] di tmurt n [[Rusya]] aseggas n [[1917]] 
 * Azarug n Afɣanistan [[1919]]
+* [[Tamyaqqant n Versailles]] deg wass n [[28 yunyu]] [[1919]] 
+* Tanekra n [[amsenɣi amadlan wis sin|umsenɣi amadlan wis sin]] aseggas n [[1939]] 
+* Azarug n [[Lubnan]] aseggas n [[1943]] 
+* Azarug n [[Surya]] aseggas n [[1946]]
+* Azarug n [[Urdun]] aseggas n [[1946]]
+* Tanekra n [[amsenɣi n 1948|umsenɣ n 1948]] gar n [[Iɛraben|iserɣinen]] d [[Israyel]]
+* Tanekra n [[amsenɣi n Kurya|umsenɣi n Kurya]] aseggas n [[1950]] 
+* [[Azarug]] n [[Libya]] aseggas n [[1951]] 
+* Tanekra n [[tagrawla tameẓrant n  1952|tegrawla n 1952]] di [[Miẓran]] 
+* Tanekra n [[amsenɣi asemmaṭ|umsenɣi asemmaṭ]] gar n [[Iwunak Yeddukklen n Temrikt|Iwunak Yeddukklen n Marikan]] d [[tiddukla n Suvyit]] deg useggas n [[1954]]
+* Tanekra n [[tagrawla taslullit n Lezzayer]] aseggas n [[1954]] 
+* Azarug n [[Sudan]] deg [[1956]]
 
 == Udmawen imeqqranen ==
 
