*Empty MediaWiki Message*

--- a/Tasut_tis_20.mw
+++ b/Tasut_tis_20.mw
@@ -64,6 +64,10 @@
 * Tanekra n [[amsenɣi asemmaṭ|umsenɣi asemmaṭ]] gar n [[Iwunak Yeddukklen n Temrikt|Iwunak Yeddukklen n Marikan]] d [[tiddukla n Suvyit]] deg useggas n [[1954]]
 * Tanekra n [[tagrawla taslullit n Lezzayer]] aseggas n [[1954]] 
 * Azarug n [[Sudan]] deg [[1956]]
+* [[Tazɣint n Sswis]] deg [[1956]]
+* Azarug n [[Tunes]] d [[Ameṛṛuk|Umeṛṛuk]] aseggas n [[1956]] 
+* Tanekra n [[amsenɣi n Vietnam|umsenɣi n Vietnam]] deg [[1957]]
+* Azarug n [[Lekwit]] deg [[1961]]
 
 == Udmawen imeqqranen ==
 
