*Empty MediaWiki Message*

--- a/Tasut_tis_20.mw
+++ b/Tasut_tis_20.mw
@@ -69,20 +69,7 @@
 * Tanekra n [[amsenɣi n Vietnam|umsenɣi n Vietnam]] deg [[1957]]
 * Azarug n [[Lekwit]] deg [[1961]]
 
-== Udmawen imeqqranen ==
-
-* [[Albert Einstein]], [[Kurt Gödel]], [[John von Neumann]], [[Alan Turing]], [[Niels Bohr]]
-* [[Sigmund Freud]], [[Carl Gustav Jung]],[[Jacques Lacan]]
-* [[Edmund Husserl]], [[Martin Heidegger]],[[Ludwig Wittgenstein]], [[Jean-Paul Sartre]],[[Theodor Adorno]], [[Emmanuel Lévinas]], [[Jacques Derrida]], [[Michel Foucault]]
-* [[Mohandas Gandhi|Gandhi]], [[Nasser]], [[Winston Churchill]], [[Charles de Gaulle]], [[Franklin Delano Roosevelt]], [[Mihail Gorbačëv]], [[Adolf Hitler]], [[Pol Pot]], [[Stalin]], [[Lenin]], [[Mao Zedong]], [[Che Guevara]], [[Rosa Luxemburg]], [[Emiliano Zapata]], [[Nelson Mandela]], [[Martin Luther King]]
-* [[John Maynard Keynes]], [[Henry Ford]], [[Bill Gates]]
-* [[Henri Matisse]], [[Pablo Picasso]], [[Jackson Pollock]] , [[Andy Warhol]]
-* [[Samuel Beckett]],[[Franz Kafka]], [[James Joyce]], [[William Faulkner]], [[Marcel Proust]], [[George Orwell]], [[Gertrude Stein]] 
-* [[Alban Berg]], [[Béla Bartók]], [[Pierre Boulez]], [[John Cage]], [[Claude Debussy]], [[Philip Glass]], [[György Ligeti]], [[Gustav Mahler]], [[Olivier Messiaen]], [[Luigi Nono]], [[Carl Orff]], [[Maurice Ravel]], [[Erik Satie]], [[Arnold Schönberg]], [[Karlheinz Stockhausen]], [[Richard Strauss]], [[Igor Stravinskij]], [[Edgar Varèse]], [[Anton Webern]]
-* [[Sidney Bechet]], [[Ornette Coleman]], [[Miles Davis]], [[Duke Ellington]], [[Ella Fitzgerald]], [[Dizzy Gillespie]], [[Billie Holiday]], [[Thelonious Monk]], [[Charlie Parker]], [[Archie Shepp]], [[Cecil Taylor]], [[Sarah Vaughan]]
-* [[The Beatles|Beatles]], [[James Brown]], [[Bob Dylan]], [[Sting]], [[Jimi Hendrix]], [[Bob Marley]], [[The Rolling Stones]], [[The Clash]], [[Pink Floyd]], [[Elvis Presley]], [[Frank Sinatra]], [[Frank Zappa]], [[Sex Pistols]], [[The Who]], [[Captain Beefheart]], [[The Doors]]
-* [[Ingmar Bergman]], [[Luis Buñuel]],[[Charlie Chaplin]], [[Francis Ford Coppola]], [[Cecil B. DeMille]], [[Maya Deren]], [[Carl Theodor Dreyer]], [[Sergej Eisenstein]], [[Rainer Werner Fassbinder]], [[Woody Allen]], [[Federico Fellini]], [[Victor Fleming]], [[John Ford]], [[David Wark Griffith]], [[Alfred Hitchcock]], [[Krzysztof Kieślowski]], [[Stanley Kubrick]], [[Fritz Lang]], [[Sergio Leone]], [[George Lucas]], [[Louis Malle]], [[Friedrich Wilhelm Murnau]],[[Yasujiro Ozu]], [[Pier Paolo Pasolini]], [[Sam Peckinpah]], [[Satyajit Ray]], [[Jean Renoir]], [[Leni Riefenstahl]], [[Roberto Rossellini]], [[Ousmane Sembène]], [[Steven Spielberg]], [[Erich von Stroheim]], [[Andrej Tarkovskij]], [[François Truffaut]], [[Orson Welles]], [[Wim Wenders]], [[Dziga Vertov]], [[Billy Wilder]]
-* [[Jan wis XXIII]], [[Jan-Pol wis II]], [[Terez n Kalkut]]
+== Tugniwin i d-ilulen deg tsut tis 20 ==
 
 == Asnulfu, tiwfit, kra yellan d amaynut ==
 
