/* isnulfuyen id yellan deg tsut tis 20 */

--- a/Tasut_tis_20.mw
+++ b/Tasut_tis_20.mw
@@ -71,7 +71,4 @@
 
 == Tugniwin i d-ilulen deg tsut tis 20 ==
 
-== Asnulfu, tiwfit, kra yellan d amaynut ==
-
-
- [[Categoria:XX secolo|XX secolo]]
+== isnulfuyen id yellan deg tsut tis 20 ==
