*Empty MediaWiki Message*

--- a/Tasut_tis_20.mw
+++ b/Tasut_tis_20.mw
@@ -1,4 +1,4 @@
-<center>[[Lqern wis XVII]] | [[Lqern wis XVIII]] | [[Lqern wis XIX]] | '''Tasut tis 20''' | [[Lqern wis XXI]] </center><br />
+<center>[[Tasut tis 17]] | [[Tasut tis 18]] | [[tasut tis 19]] | '''Tasut tis 20''' | [[Lqern wis XXI]] </center><br />
 
 <center>
 [[Iseggasen 1900]] | [[Iseggasen 1910]] | [[Iseggasen 1920]] | [[Iseggasen 1930]] | [[Iseggasen 1940]]
@@ -43,7 +43,7 @@
 ----
 
 '''Tasut tis 20''' d [[talit]] n [[akud|wakud]] i y-sentayen (i beddun) seg [[ass|wass]] n [[1 yennayer]] [[1901]] tettfakka ass n [[31 dujamber]] [[2000]]. Tasut tis 20 d tallit yeččuren d inelfuyen (ineḍruyen) [[amezruy|imazrayen]] am [[amsenɣi amadalan amenzu|umsenɣi amadalan amezwaru]] d 
-[[amsenɣi amadalan wis sin|wis sin]]. Yakk d tneflit meqqren n illalen n umesni d usiwel. S umata, tasut tis 20 tella d tallit anda teǧǧuǧǧeg teknussna 
+[[amsenɣi amadalan wis sin|wis sin]]. Yakk d tneflit meqqren n illalen n umesni d usiwel. S umata, tasut tis 20 tella d tallit anda teǧǧuǧǧeg teknussna
 
 == Inelfuyen ==
 * Tanekra n [[amsenɣi Aliban-Aṭelyan|umsenɣi Aliban-Aṭelyan]] aseggas n [[1911]]
