*Empty MediaWiki Message*

--- a/Tasut_tis_20.mw
+++ b/Tasut_tis_20.mw
@@ -1,4 +1,4 @@
-<center>[[Tasut tis 17]] | [[Tasut tis 18]] | [[tasut tis 19]] | '''Tasut tis 20''' | [[Lqern wis XXI]] </center><br />
+<center>[[Tasut tis 17]] | [[Tasut tis 18]] | [[tasut tis 19]] | '''Tasut tis 20''' | [[Tasut tis 21]] </center><br />
 
 <center>
 [[Iseggasen 1900]] | [[Iseggasen 1910]] | [[Iseggasen 1920]] | [[Iseggasen 1930]] | [[Iseggasen 1940]]
