--- a/Tasut_tis_20.mw
+++ b/Tasut_tis_20.mw
@@ -68,6 +68,8 @@
 * Azarug n [[Tunes]] d [[Ameṛṛuk|Umeṛṛuk]] aseggas n [[1956]] 
 * Tanekra n [[amsenɣi n Vietnam|umsenɣi n Vietnam]] deg [[1957]]
 * Azarug n [[Lekwit]] deg [[1961]]
+* Azarug n [[Lezzayer]] ass n [[5 yulyu]] [[1962]]
+* [[Amsenɣi n sdis n wussan]] gar [[Yisrayel]] d [[aɛraben|iserɣinen]]
 
 == Tugniwin i d-ilulen deg tsut tis 20 ==
 
