*Empty MediaWiki Message*

--- a/Tasut_tis_20.mw
+++ b/Tasut_tis_20.mw
@@ -57,7 +57,7 @@
 * Azarug n [[Lubnan]] aseggas n [[1943]] 
 * Azarug n [[Surya]] aseggas n [[1946]]
 * Azarug n [[Urdun]] aseggas n [[1946]]
-* Tanekra n [[amsenɣi n 1948|umsenɣ n 1948]] gar n [[Iɛraben|iserɣinen]] d [[Israyel]]
+* Tanekra n [[amsenɣi n 1948|umsenɣ n 1948]] gar n [[Aɛraben|iserɣinen]] d [[Israyel]]
 * Tanekra n [[amsenɣi n Kurya|umsenɣi n Kurya]] aseggas n [[1950]] 
 * [[Azarug]] n [[Libya]] aseggas n [[1951]] 
 * Tanekra n [[tagrawla tameẓrant n  1952|tegrawla n 1952]] di [[Miẓran]] 
