--- a/Tasut_tis_20.mw
+++ b/Tasut_tis_20.mw
@@ -70,6 +70,11 @@
 * Azarug n [[Lekwit]] deg [[1961]]
 * Azarug n [[Lezzayer]] ass n [[5 yulyu]] [[1962]]
 * [[Amsenɣi n sdis n wussan]] gar [[Israyel]] d [[aɛraben|iserɣinen]]
+* Tanekra n [[amsenɣi n Yom Kipur|umsenɣi n tuber 1973]] gar n [[Miẓran]] d [[Surya]] seg tama, Yakk d [[Israyel]] seg tama n iden
+* [[Amsenɣi aɣarim n Lubnan]] deg [[1975]]
+* [[Tikli tazegzawt]] ass n [[6 wamber]] [[1975]] 
+* [[Tafsut n imaziɣen]] ass n [[20 yebrir]] [[1980]] 
+* [[Amsenɣi n Iṛan-Iraq]] deg [[1980]]
 
 == Tugniwin i d-ilulen deg tsut tis 20 ==
 
