*Empty MediaWiki Message*

--- a/Tasut_tis_20.mw
+++ b/Tasut_tis_20.mw
@@ -75,6 +75,12 @@
 * [[Tikli tazegzawt]] ass n [[6 wamber]] [[1975]] 
 * [[Tafsut n imaziɣen]] ass n [[20 yebrir]] [[1980]] 
 * [[Amsenɣi n Iṛan-Iraq]] deg [[1980]]
+* [[Tanegzart n Hama]] deg [[1982]] 
+* Azarug n [[Brunei]] aseggas n [[1984]]
+* Tanekra n [[Asekker amezwar|terawla n yizṛa tamenzut]] deg [[Falesṭin]] aseggas n [[1987]]
+* [[Amsenɣi n uslallu]] aseggas n [[1990]] 
+* Aɣelluy n [[Tiddukla n Suvyit|Teddukla n Suvyit]] ass n [[26 dujamber]] [[1991]]
+* [[Asekker wis sin]] aseggas n [[2000]]
 
 == Tugniwin i d-ilulen deg tsut tis 20 ==
 
