*Empty MediaWiki Message*

--- a/Tangimt.mw
+++ b/Tangimt.mw
@@ -7,3 +7,6 @@ Deg [[taswast]] yal tangimt tessentay (tbeddu) s useggas amezwar (Uṭṭun 1)
 * [[Aseggas]]
 * [[Tamrawt]]
 * [[Ayyur]]
+
+[[Taggayt:tingimin]]
+[[Taggayt:Tiggtin tikudanin]]
