--- a/Tasut_tis_21.mw
+++ b/Tasut_tis_21.mw
@@ -1,5 +1,5 @@
 <center>
-[[Lqern wis XVIII]] | [[Lqern wis XIX]] | [[Lqern wis XX]] | '''Lqern wis XXI'''</center><br />
+[[Tasut tis 18]] | [[Tasut tis 19]] | [[Tasut tis 20]] | '''Tasut tus 21'''</center><br />
 
 <center>
 [[Iseggasen 2000]] | [[Iseggasen 2010]] | [[Iseggasen 2020]] | [[Iseggasen 2030]] | [[Iseggasen 2040]]
@@ -45,6 +45,7 @@
 imiḍi '''wis XXI''' (timiḍi wis 21) yebda-d ass n [[1ru yennayer]] [[2001]] dɣa ad yefuk ass n [[31 dujamber]] [[2100]].
 
 → Yetsmeɣred gar [[Ass julien|ussan julien]] {{formatnum:2451911}} ar {{formatnum:2488434}} yekcem.
+
 == Ayen yeḍran ==
 
 == Udmawen imeqranen ==
