--- a/Agraw_n_Ṣummam.mw
+++ b/Agraw_n_Ṣummam.mw
@@ -1,5 +1,7 @@
 {{Databox}}
-'''Agraw n Ṣummam''' itwasides sɣuer [[Ɛebban Ṛemḍan]] d [[Lɛarbi Ben Mhidi]], wid iqublen syes llan [[Krim Belqasem]], [[Ɛmar Uɛemran]], [[Ssi Mḥemmed]] (Bugerra), [[Ssi Ṣadeq]], [[Ɛazzedin]], [[Ssi Lexḍer]], [[Ɛli Xuǧa]],[[ Ɛli Mellaḥ]], yedra [[20 ɣuct]] [[1956]] g taddart n [[Iɣban]] d [[Ifri]] g tɣiwant n [[Iwzellagen]].
+'''Agraw n Ṣummam''' itwasides sɣuer [[Ɛebban Ṛemḍan]] d [[Lɛarbi Ben Mhidi]], wid iqublen syes llan [[Krim Belqasem|Krim Belqasem ( tafunest )]]
+
+, [[Ɛmar Uɛemran]], [[Ssi Mḥemmed]] (Bugerra), [[Ssi Ṣadeq]], [[Ɛazzedin]], [[Ssi Lexḍer]], [[Ɛli Xuǧa]],[[ Ɛli Mellaḥ]]  [[20 ɣuct]] [[1956]] g taddart n [[Iɣban]] d [[Ifri]] g tɣiwant n [[Iwzellagen]].
 
 Lameɛna llan widak ur qbilen ara s ayen y diruḥ agraw am tama tutrimt n [[Lezzayer]], tama n [[Arris]], d unzul, axaṭer tigti n imdebren-ines llan d [[Leqbayel]].
 
