--- a/Tasut_tis_21.mw
+++ b/Tasut_tis_21.mw
@@ -42,9 +42,9 @@
 |}
 </center>
 
-imiḍi '''wis XXI''' (timiḍi wis 21) yebda-d ass n [[1ru yennayer]] [[2001]] dɣa ad yefuk ass n [[31 dujamber]] [[2100]].
+'''Tasut tus 21 ''' d tallit n wakud tebda deg wass n [[1 yennayer]] [[2001]] ad tfakk ass n [[31 dujamber]] [[2100]].
 
-→ Yetsmeɣred gar [[Ass julien|ussan julien]] {{formatnum:2451911}} ar {{formatnum:2488434}} yekcem.
+== [[Taswast]] ==
 
 == Ayen yeḍran ==
 
