*Empty MediaWiki Message*

--- a/Tasut_tis_21.mw
+++ b/Tasut_tis_21.mw
@@ -1,5 +1,5 @@
 <center>
-[[Tasut tis 18]] | [[Tasut tis 19]] | [[Tasut tis 20]] | '''Tasut tus 21'''</center><br />
+[[Tasut tis 18]] | [[Tasut tis 19]] | [[Tasut tis 20]] | '''Tasut tis 21'''</center><br />
 
 <center>
 [[Iseggasen 2000]] | [[Iseggasen 2010]] | [[Iseggasen 2020]] | [[Iseggasen 2030]] | [[Iseggasen 2040]]
