--- a/Agraw_n_Ṣummam.mw
+++ b/Agraw_n_Ṣummam.mw
@@ -5,4 +5,8 @@
 
 Lameɛna llan widak ur qbilen ara s ayen y diruḥ agraw am tama tutrimt n [[Lezzayer]], tama n [[Arris]], d unzul, axaṭer tigti n imdebren-ines llan d [[Leqbayel]].
 
+Louay Tselkim
+
+Dawida sergent chef
+
 [[Taggayt: Amezruy n Dzayer]][[Category:Amezruy]]
