*Empty MediaWiki Message*

--- a/Tasut_tis_21.mw
+++ b/Tasut_tis_21.mw
@@ -42,7 +42,7 @@
 |}
 </center>
 
-'''Tasut tus 21 ''' d tallit n wakud tebda deg wass n [[1 yennayer]] [[2001]] ad tfakk ass n [[31 dujamber]] [[2100]].
+'''Tasut tus 21 ''' d tallit n wakud tebda deg wass n [[1 yennayer]] [[2001]] ad tfakk ass n [[31 dujamber]] [[2100]]. Tawsit-a tga d tasut tamezwarut deg [[tangimt]] [[tangimt tis 3|tis 3]]
 
 == [[Taswast]] ==
 
