*Empty MediaWiki Message*

--- a/Tasut_tis_21.mw
+++ b/Tasut_tis_21.mw
@@ -47,6 +47,10 @@
 == [[Taswast]] ==
 
 == Inelfuyen ==
+===Deg tsartit=== 
+* [[2001]]: [[tiytiwin n 11 ctember]] di [[Manhattan]] ayen id yeglan s 2 976 inemkasen (lmuta) d 6 000 n imagusen (wid yettwajerḥen) 
+* [[Amsenɣi n Afɣanistan]] igan d amur seg [[amsenɣi mgal taremmiɣt]] 
+* [[Isek agraɣlan ɣef usnefli asulan]] deg [[2002]] yesdukkel ugar n 100 n [[aselway|iselwayen]] n [[awanak|tmura]] d wazal n 60 000 n imdanen
 
 == Udmawen imeqranen ==
 
