*Empty MediaWiki Message*

--- a/Tasut_tis_21.mw
+++ b/Tasut_tis_21.mw
@@ -59,5 +59,9 @@
 * [[Vladimir Putin]], aselway n [[Larusi]]
 * [[Ariel Sharon]], ameqqar n [[Israyil]]
 
-== Asnulfu, tiwfit atg. ==
-* Deg [[2002]] yemla [[Grigori Perelman]] asekkud (théorème) umi semman [[conjektur n Poincaré]].
+== ẓeṛ daɣen ==
+* [[Tasut tis 20]]
+
+
+[[Taggayt:tasutin]]
+[[Taggayt:Tiggtin tikudanin]]
