--- a/Agraw_n_Ṣummam.mw
+++ b/Agraw_n_Ṣummam.mw
@@ -1,8 +1,6 @@
 {{Databox}}
-'''Agraw n Ṣummam''' itwasides sɣuer [[Ɛebban Ṛemḍan]] d [[Lɛarbi Ben Mhidi]], wid iqublen syes llan [[Krim Belqasem|Bilal Criminal]],Dawida sergent chef , [[Ssi Mḥemmed|Vidyar Boulbger]] (Bugerra), [[Ssi Ṣadeq|Oussama Jidanov]] , [[Ɛazzedin|Didin klach]], [[Ssi Lexḍer|Mouloud El Idrissi]], ,  [[20 ɣuct]] [[1956]] g taddart n [[Iɣban]] d [[Ifri]] g tɣiwant n [[Iwzellagen]].
+'''Agraw n Ṣummam''' itwasides sɣuer [[Ɛebban Ṛemḍan]] d [[Lɛarbi Ben Mhidi]], wid iqublen syes llan [[Krim Belqasem]], [[Ɛmar Uɛemran]], [[Ssi Mḥemmed]] (Bugerra), [[Ssi Ṣadeq]], [[Ɛazzedin]], [[Ssi Lexḍer]], [[Ɛli Xuǧa]],[[ Ɛli Mellaḥ]], yedra [[20 ɣuct]] [[1956]] g taddart n [[Iɣban]] d [[Ifri]] g tɣiwant n [[Iwzellagen]].
 
 Lameɛna llan widak ur qbilen ara s ayen y diruḥ agraw am tama tutrimt n [[Lezzayer]], tama n [[Arris]], d unzul, axaṭer tigti n imdebren-ines llan d [[Leqbayel]].
-
-<br />
 
 [[Taggayt: Amezruy n Dzayer]][[Category:Amezruy]]
