--- a/Tasut_tis_21.mw
+++ b/Tasut_tis_21.mw
@@ -51,6 +51,12 @@
 * [[2001]]: [[tiytiwin n 11 ctember]] di [[Manhattan]] ayen id yeglan s 2 976 inemkasen (lmuta) d 6 000 n imagusen (wid yettwajerḥen) 
 * [[Amsenɣi n Afɣanistan]] igan d amur seg [[amsenɣi mgal taremmiɣt]] 
 * [[Isek agraɣlan ɣef usnefli asulan]] deg [[2002]] yesdukkel ugar n 100 n [[aselway|iselwayen]] n [[awanak|tmura]] d wazal n 60 000 n imdanen
+* [[2003]]: Asenti n [[Tizeggit n Yiraq|Anbaẓ n Lɛiraq]] 
+* [[2004]]: 10 n tmura letɣent (kecment) ar [[tiddukla n Uruppa]] 
+* [[2008]]: [[Barack Obama]] yerna (yerbeḥ) deg tifranin n Marikan, s wakka ad yili d aselway aberkan amezwaru ara ad yeṭṭfen Marikan
+* [[2010]]- [[2012]]: Asenti n [[Tafsut taɛrabt|tegrawliwin n tefsut taserɣint]] ayen id yeglan s uɣelluy n 4 n inagrawen 
+* [[2011]]: Anfufed n [[amsenɣi aɣarim deg Surya|umsenɣi aɣarim n Surya]] s usrag n tefsut taserɣint 
+* [[2013]]: Tanekra n [[Asuddes n uwanak ineslem|usuddes n uwanak ineslem]]
 
 == Udmawen imeqranen ==
 
