*Empty MediaWiki Message*

--- a/Tturk.mw
+++ b/Tturk.mw
@@ -1,5 +1,6 @@
 {{Databox}}
 '''Tturk''' neɣ tagduda n Tturk d tamurt y dezgan ɣef sin imenẓawen, neɣ 97% g umenẓaw n [[Asya]], d 3% g umenẓaw n [[Turuft]], tikwal qaren fellas tarufit, tikwal nniden qaren fellas tasyawit, tesɛa tilas d [[Bulgarya]], [[Legrig]], [[Jurjya]], [[Arminya]], [[Iran]], L[[ɛiraq]], [[Surya]]
+Turkiya, s Tturkit Türkye Cumhuriyeti, d yiwet n tagduda taselwit, aselway-is d Rajap Ṭayip Arduɣan. Di 2018, lpost n Aɣlaf amezwaru i ttwa suprimi di anabaḍ. Tamurt-a i bennitt Meṣṭafa Kamal Aṭaṭurk, tella di 1299 ar 1923 d Tagduda Taɛtmanit, umbeɛd, xemmen Tagduda Tajmaɛit (ar 2018 tqled d Tagduda Taselwit).
 
 == Gallery ==
 <gallery>
