--- a/Aslewlaw.mw
+++ b/Aslewlaw.mw
@@ -1,7 +1,7 @@
 {{Automatic taxobox}}
 '''Aslewlaw''' ([[Assaɣ ussnan]]: '''Picus vaillantii''') d [[talmest]] n [[aylal|yigṭaṭ]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[alsulaw|uslulaw]], dɣa tawsit-a d tin yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[amddeɣgejja|imeddeɣgejja]]
 
-Talmest-a d tin yettidiren deg [[Lezzayer]] (d [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]]) yakk d [[Ameṛṛuk|Umeṛṛuk]]. Yettili deg [[tagant|tẓegwa d TAGANIN]] n [[idurar n Waṭlas]] 
+Talmest-a d tin yettidiren deg [[Lezzayer]] (d [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]]) yakk d [[Ameṛṛuk|Umeṛṛuk]]. Yettili deg [[tagant|tẓegwa d taganin]] n [[idurar n waṭlas]]
 
 == Aẓaṛ n wawal ==
 Iqbayliyen d Icawiyen ssemman-as s yisem-a «aslewlaw» acku [[asčewčew|asčewčew-is]] d win yettemcabin s waṭas ar [[Aslilew|uslilew]] 
