*Empty MediaWiki Message*

--- a/Aslilew.mw
+++ b/Aslilew.mw
@@ -1,6 +1,6 @@
 '''Aslilew''' neɣ '''Aslewlew''' d [[imesli]] id yettmagen s uwliwel (s uḥerrek) n [[iles|yiles]] deg [[imi|yimi]] s idis ar yidis s tewtilt (s ccerṭ) ad yili uwliwel ayyi yemṭafar yakk d tigin n imesli s usufeɣ n [[azwu|uzwu]] seg [[agerjum|ugerjum]] s tdusi. Deg tikwal yettili-d ugani (litkal) ɣef usexdem n ufus, dɣa imesli (ṣṣut) id ittefɣen isem-is '''tiɣratin'''
 
-Llant waṭas n tlemmiẓin anda islewliwent degsent tulawin (timeṭṭuyin) am [[tissulya]] d [[tasekra|tsekra]] d kra n tlemmiẓin n iden adɣa tid yeqqnen ar [[asɣan|wesɣan]] am [[Lmulud]] 
+Llant waṭas n tlemmiẓin anda islewliwent degsent tulawin (timeṭṭuyin) am [[tissulya]] d [[tasekra (tamhelt)|tsekra]] d kra n tlemmiẓin n iden adɣa tid yeqqnen ar [[asɣan|wesɣan]] am [[Lmulud]]
 
 == Aslilew deg yidles Aqbayli d umaziɣ ==
 
