*Empty MediaWiki Message*

--- a/Azirdiw.mw
+++ b/Azirdiw.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
 
-'''Azirdiw''' ([[Assaɣ usnan]]: ''Herpestes'') d [[tawsit (tudersent)|tawsit]] n [[aɣersiw|iɣersiwen]] [[Timsiffatin|isuṭad]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tizirditin|tzirditin]], Dges mṛaw (10) n [[talmest|telmas]] d kra n [[Adu-telmest|tdu-lmas]] d yiwet n telmest [[angar|tenger]]
+'''Azirdiw''' neɣ '''Amundas''' ([[Assaɣ usnan]]: '''Herpestes''') d [[tawsit (tudersent)|tawsit]] n [[aɣersiw|iɣersiwen]] [[Timsiffatin|isuṭaṭ]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tizirditin|tzirditin]], Dges mṛaw (10) n [[talmest|telmas]] d kra n [[Adu-telmest|tdu-lmas]] d yiwet n telmest [[angar|tenger]]
 
 == Tilmas ==
 {| class="wikitable"
