*Empty MediaWiki Message*

--- a/Tasekra.mw
+++ b/Tasekra.mw
@@ -1,13 +1,14 @@
+{{Automatic taxobox}}
+'''Tasekla''' neɣ '''Tasedla''' ([[Assaɣ ussnan]]: '''Echinops''') d [[tawsit (tudersent)|tawsit]] n [[imɣi|yimɣan]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titriyyin]], Deg tewsit-a llant wazal n 120 n [[talmest|telmas]] amur ameqran deg-sent yettemɣay-d deg [[Turuft|Uruppa]] d [[Asya]] d [[Tafriqt|Tefrikt]] 
 
-Isem-is s latinit: Echinops spinosus L.
+== Tiskanin timatanin ==
 
-Isem-is s tefransist: Echinops
+== Tilmas ==
 
-Ismawen-is nniḍen s teqbaylit:
+== Ẓeṛ daɣen ==
 
-Ismawen-is nniḍen s tmaziɣt: 
-
-
+[[Taggayt:Imɣan]]
+[[Taggayt:Tiwsitin n yimɣan]]
 
 == Leṣnaf nniḍen ==
 * 
