--- a/Afurmas.mw
+++ b/Afurmas.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
 
-'''Afurmas''' ([[isem usnan]]: ''Prunus domestic''),  d yiwet n [[Talmest|talmest]] yeṭṭafaren [[tawsit]] [[tisiɣidt]]
+'''Afurmas''' ([[Assaɣ ussnan]]: ''Prunus domestic'') d [[Talmest|talmest]] n [[imɣan]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[afurmas (tawsit)|ufurmas]]
 (llan wid is yeqqaren ''Lberquq''  maca awal-a d Aɛrab ''البرقوق'').
 
 == Ẓeṛ daɣen == 
