*Empty MediaWiki Message*

--- a/Arḍlim.mw
+++ b/Arḍlim.mw
@@ -1,7 +1,15 @@
-{{Databox}}
-{{Datastub}}
-[[Tugna:Prunus avium.jpg|thumb|Prunus avium - Merisier - Aṛeḍlim<ref>'Amawal n Yemɣan - Lexique de plantes ' - Chabane Mohand u Remdane - Mémoire d'études en Agronomie - Université de Tizi ouzou (non daté ~années 80)</ref>]]
-[[Tugna:Prunus avium fruit.jpg|thumb|Prunus avium - fruits Merises - Aṛeḍlim]]
+{{Automatic taxobox}}
+'''Taṛtelt''' neɣ '''Anedrim''' ([[Assaɣ ussnan]]: '''Prunus avium''') d [[aseklu]] id yettemɣayen deg [[Turuft|Uruppa]] d [[Asya]] d [[Tafriqt Ugafa|Tefrikt n ugafa]]. Talmest-a teṭṭafar [[tawsit (tudersent)|tawsit]] n [[Afurmas (tawsit)|ufurmas]] igan d agman deg [[tawacult (tasnudert)|twacult]] n [[tanejjijt|tnejjikt]]
+
+== Aglam ==
+
+== Tilmas yettwaẓẓun ==
+
+== Asexdem ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Imɣan]]
 
 == Tilmas ==
 *
