*Empty MediaWiki Message*

--- a/Arḍlim.mw
+++ b/Arḍlim.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Taṛtelt''' neɣ '''Anedrim''' ([[Assaɣ ussnan]]: '''Prunus avium''') d [[aseklu]] id yettemɣayen deg [[Turuft|Uruppa]] d [[Asya]] d [[Tafriqt n Ugafa|Tefrikt n ugafa]]. Talmest-a teṭṭafar [[tawsit (tudersent)|tawsit]] n [[Afurmas (tawsit)|ufurmas]] igan d agman deg [[tawacult (tasnudert)|twacult]] n [[tanejjijt|tnejjikt]]
+'''Taṛtelt''' neɣ '''Anedrim''' ([[Assaɣ ussnan]]: '''Prunus avium''') d [[aseklu]] id yettemɣayen deg [[Turuft|Uruppa]] d [[Asya]] d [[Tafriqt n Ugafa|Tefrikt n ugafa]]. Talmest-a teṭṭafar [[tawsit (tudersent)|tawsit]] n [[Afurmas (tawsit)|ufurmas]] igan d agman deg [[tawacult (tasnudert)|twacult]] n [[tanejjikt|tnejjikt]]
 
 == Aglam ==
 
