*Empty MediaWiki Message*

--- a/Aslewlaw.mw
+++ b/Aslewlaw.mw
@@ -3,8 +3,8 @@
 
 Talmest-a d tin yettidiren deg [[Lezzayer]] (d [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]]) yakk d [[Ameṛṛuk|Umeṛṛuk]]. Yettili deg [[tagant|tẓegwa d taganin]] n [[idurar n waṭlas]]
 
-== Aẓaṛ n wawal ==
-Iqbayliyen d Icawiyen ssemman-as s yisem-a «aslewlaw» acku [[asčewčew|asčewčew-is]] d win yettemcabin s waṭas ar [[Aslilew|uslilew]] 
+== [[Tasnettit|Aẓaṛ n wawal]] ==
+Iqbayliyen d Icawiyen ssemman-as s yisem-a «aslewlaw» acku [[asčewčew|asčewčew-is]] d win yettemcabin s waṭas ar [[Aslilew|uslilew]]
 
 == Aglam ==
 
