*Empty MediaWiki Message*

--- a/Aslewlaw.mw
+++ b/Aslewlaw.mw
@@ -7,9 +7,15 @@ Talmest-a d tin yettidiren deg [[Lezzayer]] (d [[Tamurt n Leqbayel|Tmurt n Iqbay
 Iqbayliyen d Icawiyen ssemman-as s yisem-a «aslewlaw» acku [[asčewčew|asčewčew-is]] d win yettemcabin s waṭas ar [[Aslilew|uslilew]]
 
 == Aglam ==
+Tiddi n uslewlaw d tin igan gar n 30 ar 33 cm. Ma d teɣzi-ynes gar 45 d 51 cm. S isefka ayyi ad yili yettemcabi ar [[Aslewlaw n ibirya|weslewlaw n ibirya]] 
 
+== Tikeli ==
 
+== Amyaraw ==
 
+== Aslewlaw deg yidles Aqbayli == 
+
+== Ẓeṛ daɣen ==
 
 
 [[Taggayt:iylalen]]
