*Empty MediaWiki Message*

--- a/Taswast_tamaziɣt.mw
+++ b/Taswast_tamaziɣt.mw
@@ -1,4 +1,4 @@
-'''Taswast Tamaziɣt''' d [[taswast]] [[Takerza|anakraz]] yettusxedmen deg tmura n [[Tafriqt n ugafa|Tefriqt n ugafa]] (ɣer [[imaziɣen]] d [[imaziɣen imserɣnen]] tikwal), Taswast Tamaziɣt d tin yezwaren [[taswast tagrigurt]] s 950 n [[aseggas|iseggasen]], [[Ass]] amenzu Deg teswast-a ([[Yennayer]]) yettmagar-d ass n 12 Yennayer seg teswast tagrigurt 
+'''Taswast Tamaziɣt''' d [[taswast]] [[Takerza|tanakrazt]] yettusxedmen deg tmura n [[Tafriqt n ugafa|Tefriqt n ugafa]] (ɣer [[imaziɣen]] d [[imaziɣen imserɣnen]] tikwal), Taswast Tamaziɣt d tin yezwaren [[taswast tagrigurt]] s 950 n [[aseggas|iseggasen]], [[Ass]] amenzu Deg teswast-a ([[Yennayer]]) yettmagar-d ass n 12 Yennayer seg teswast tagrigurt
 
 == Aẓar-is ==
 
