*Empty MediaWiki Message*

--- a/1_yennayer.mw
+++ b/1_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n '''1 yennayer''' d ass amezwaru n useggas. Llan 364 wussan deffir-s ar taggara n useggas, 365 ma d aseggas bisekstil.
+Ass n '''1 yennayer''' d [[ass]] amezwaru n yal aseggas deg [[taswast tagrigurt|teswast tagrigurt]]. Llan 364 wussan deffir-s ar taggara n useggas, neɣ 365 n wussan ma d [[aseggas amanaẓ]]
 <center>[[31 dujamber]] - ''1 yennayer'' - [[2 yennayer]]</center>
 
 == Tidyanin ==
