*Empty MediaWiki Message*

--- a/1_yennayer.mw
+++ b/1_yennayer.mw
@@ -2,8 +2,9 @@
 Ass n '''1 yennayer''' d [[ass]] amezwaru n yal aseggas deg [[taswast tagrigurt|teswast tagrigurt]]. Llan 364 wussan deffir-s ar taggara n useggas, neɣ 365 n wussan ma d [[aseggas amanaẓ]]
 <center>[[31 dujamber]] - ''1 yennayer'' - [[2 yennayer]]</center>
 
-== Tidyanin ==
-=== Timiḍi wis 21 ===
+== Inelfuyen ==
+
+=== [[Tasut tis 21]] ===
 * [[2001]] : [[Grik|Tamurt n Grik]] tekcem di [[taɣzut euro]].
 * [[2002]] : 
 **[[euro|idrimen n euro]] kecmen ar tasnisnit deg 12 [[Iwunak imaslaḍen n Tadukli n Turuft]].
