--- a/1_yennayer.mw
+++ b/1_yennayer.mw
@@ -3,6 +3,12 @@ Ass n '''1 yennayer''' d [[ass]] amezwaru n yal aseggas deg [[taswast tagrigurt|
 <center>[[31 dujamber]] - ''1 yennayer'' - [[2 yennayer]]</center>
 
 == Inelfuyen ==
+* [[1531]]: Asersi n temdint n [[Rio de Janeiro]]
+* [[1651]]: [[Charles II n Legniz|Charles II]] yeṭṭef tanabadt n [[Skutlanda]] 
+* [[1801]]
+** Asersi n teddukla gar n [[Bṛitanya tameqrant]] d [[Irland]]
+** Asnirem n [[aswffud|useffud]] amezwaru deg tiggi n [[tagnit|tegnit]]
+
 
 === [[Tasut tis 21]] ===
 * [[2001]] : [[Grik|Tamurt n Grik]] tekcem di [[taɣzut euro]].
