*Empty MediaWiki Message*

--- a/Takamimt.mw
+++ b/Takamimt.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
 
-'''Takamimt''' ([[isem usnan]]: ''Cuminum cyminum'') d [[imɣan|imɣi]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tabecnixt (tawacult)|tbecnixt]].
+'''Takamimt''' ([[Assaɣ ussnan]]: '''Cuminum cyminum''') d [[imɣan|imɣi]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tabecnixt (tawacult)|tbecnixt]].
 
 [[Tugna:Sa cumin.jpg|thumb|250px|[[ifes|ifsan]] n tkamimt]]
 
